samples/_failures_safe/1761524891_ffc7e4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4915fb9a.c: In function ‘main’:
./samples/SAFE/__tmp_4915fb9a.c:172:37: error: expected ‘)’ at end of input
  172 |     print_tokens(tokens, token_count
      |                 ~                   ^
      |                                     )
./samples/SAFE/__tmp_4915fb9a.c:172:5: error: expected declaration or statement at end of input
  172 |     print_tokens(tokens, token_count
      |     ^~~~~~~~~~~~
